# mercury

./: .ghci  CHANGELOG.md  LICENSE  mercury.cabal  style.css
app/: Main.hs
src/Mercury/: DevMain.hs  Examples.hs  Expression.hs  Prelude.hs  Runtime.hs  Variable.hs  Widget.hs  Window.hs
src/Mercury/Runtime/: Gtk.hs  Identified.hs  Rendering.hs
src/Mercury/Runtime/Rendering/: Backend.hs  Gtk.hs  Handle.hs
src/Mercury/Variable/: Typed.hs
src/Mercury/Window/: Geometry.hs
test/Mercury/Runtime/Rendering/: GtkSpec.hs
test/Mercury/Window/: GeometrySpec.hs
