cabal-version:      3.4
name:               mercury
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Yecine Megdiche
maintainer:         yecine.megdiche@gmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Werror
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wno-unused-do-bind
        -Wredundant-constraints

common executable-flags
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

common lib-deps
    build-depends:
          base ^>=4.18.3.0
        , gi-gtk4 ^>=4.0.12
        , gi-glib ^>=2.0.30
        , gi-gio ^>=2.0.35
        , gi-gdk4 ^>=4.0.10
        , gi-gdkx11 ^>=4.0.9
        , haskell-gi-base ^>=0.26.9
        , text
        , process
        , transformers
        , containers
        , time
        , stm
        , stm-containers ^>=1.2.1.1
        , hashable ^>=1.5.0.0
        , mtl ^>=2.3.1
        , data-default ^>=0.8.0.1
        , focus ^>=1.0.3.2
        , list-t ^>=1.0.5.7
        , unliftio ^>=0.2.25.1
        , X11 ^>=1.10.3

library
    import:           warnings, lib-deps
    exposed-modules:
          Mercury.DevMain
          Mercury.Expression
          Mercury.Runtime
          Mercury.Runtime.Rendering.Backend
          Mercury.Runtime.Rendering.Gtk
          Mercury.Runtime.Identified
          Mercury.Variable
          Mercury.Variable.Typed
          Mercury.Widget
          Mercury.Window
          Mercury.Window.Geometry

    hs-source-dirs:   src
    default-language: GHC2021

executable mercury
    import:           warnings, executable-flags
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        mercury

    hs-source-dirs:   app
    default-language: GHC2021

test-suite mercury-test
    import:           warnings, executable-flags, lib-deps
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          Spec.hs
    other-modules:
        Mercury.DevMain
        Mercury.Expression
        Mercury.Runtime
        Mercury.Runtime.Rendering.Backend
        Mercury.Runtime.Rendering.Gtk
        Mercury.Runtime.Identified
        Mercury.Variable
        Mercury.Variable.Typed
        Mercury.Widget
        Mercury.Window
        Mercury.Window.Geometry
        -- Tests here
        Mercury.Window.GeometrySpec
        Mercury.Runtime.Rendering.GtkSpec 
    build-depends:
        hspec,
        QuickCheck
    build-tool-depends:
        hspec-discover:hspec-discover
